# movie-recommendation-system

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  STRUCTURE.md  app.py  database.py  dependencies.py  environment.yml  logger.py  main.py  movie_list.pkl  pyproject.toml  requirements.txt  services.py  test_app.py  test_app.py  # (add a hello world test if not present)  test_main.py  top_distances.pkl  top_indices.pkl
.github/workflows/: main.yaml
.streamlit/: config.toml
routers/: auth.py  movies.py  users.py
static/: api.js  style.css
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  library.html  login.html  movie.html  movie_details.html  movie_not_found.html  search.html  signup.html
